--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,10 @@
-# Solus Command - Environment Variables
-# Copy this file to .env.local and fill in your API keys
-
-# Required - Text Models
+# Required API Keys
 ANTHROPIC_API_KEY=sk-ant-...
 GOOGLE_AI_API_KEY=...
 PERPLEXITY_API_KEY=pplx-...
 
-# Optional - Media Generation (coming soon)
-KREA_API_KEY=
-RUNWAY_API_KEY=
-ELEVENLABS_API_KEY=
-HEYGEN_API_KEY=
+# Optional (for media generation)
+KREA_API_KEY=...
+RUNWAY_API_KEY=...
+ELEVENLABS_API_KEY=...
+HEYGEN_API_KEY=...
